force-app/main/default/objects/Community_User_Local_Settings__c/Community_User_Local_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CP or PP user Local Language settings</description>
    <label>Community User Local Settings</label>
</CustomObject>