force-app/main/default/objects/Community_User_Local_Settings__c/fields/CONTACT_GPUGENIUS_GROUP__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_GPUGENIUS_GROUP__c</fullName>
    <description>Lead.Country And COUNTRY_LIST =&gt; CONTACT_GPUGENIUS_GROUP
CONTACT_GPUGENIUS_GROUP is set to Contact.GPU_Genius_Groups__c (Lead Trigger)</description>
    <inlineHelpText>Lead.Country And COUNTRY_LIST =&gt; CONTACT_GPUGENIUS_GROUP
CONTACT_GPUGENIUS_GROUP is set to Contact.GPU_Genius_Groups__c (Lead Trigger)</inlineHelpText>
    <label>CONTACT_GPUGENIUS_GROUP</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>