force-app/main/default/objects/Community_User_Local_Settings__c/fields/COUNTRY_LIST__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_LIST__c</fullName>
    <defaultValue>&quot;United States&quot;</defaultValue>
    <description>Country Names in UPPER case and separated by comma(,)</description>
    <inlineHelpText>Country Names in UPPER case and separated by comma(,)</inlineHelpText>
    <label>COUNTRY_LIST</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>