force-app/main/default/objects/Community_User_Local_Settings__c/fields/Localized_Portal__c.field-meta.xml
<CustomField>
    <fullName>Localized_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Localized Portal ?</label>
    <type>Checkbox</type>
</CustomField>