force-app/main/default/objects/Community_User_Local_Settings__c/fields/REGION__c.field-meta.xml
<CustomField>
    <fullName>REGION__c</fullName>
    <description>Portal Lite Content Filtering based on Competency and Region field (SPS-46, SIR-PJ25604)</description>
    <label>REGION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>