force-app/main/default/objects/Community_User_Local_Settings__c/fields/USER_ALIAS__c.field-meta.xml
<CustomField>
    <fullName>USER_ALIAS__c</fullName>
    <defaultValue>&quot;Training&quot;</defaultValue>
    <label>USER_ALIAS</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>