force-app/main/default/objects/Community_User_Local_Settings__c/fields/USER_EMAILENCODEKEY__c.field-meta.xml
<CustomField>
    <fullName>USER_EMAILENCODEKEY__c</fullName>
    <defaultValue>&quot;UTF-8&quot;</defaultValue>
    <label>USER_EMAILENCODEKEY</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>