force-app/main/default/objects/Community_User_Local_Settings__c/fields/USER_LANGLOCALEKEY__c.field-meta.xml
<CustomField>
    <fullName>USER_LANGLOCALEKEY__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>Lead.Country AND COUNTRY_LIST =&gt; USER_LANGLOCALEKEY which is used to set User.Language (Lead Trigger)</description>
    <inlineHelpText>Lead.Country AND COUNTRY_LIST =&gt; USER_LANGLOCALEKEY which is used to set User.Language (Lead Trigger)</inlineHelpText>
    <label>USER_LANGLOCALEKEY</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>