force-app/main/default/objects/Community_User_Local_Settings__c/fields/USER_LANGUAGE__c.field-meta.xml
<CustomField>
    <fullName>USER_LANGUAGE__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <description>Used to show CP or PP Box and its contents based on the Language Column value.
The user&apos;s language attribute is matched with Community User Local Settings.USER_LANGLOCALEKEY to derive the value for USER_LANGUAGE and this gets matched to Portal Home Page Boxe.Language__c to filter the Boxes in addition to Permission Sets.(Lite Portal &amp; Partner Portal controllers)</description>
    <inlineHelpText>CP or PP Box and its contents based on the Language Column value.
User.Language AND USER_LANGLOCALEKEY =&gt; USER_LANGUAGE.
USER_LANGUAGE AND Portal Home Page Box.Lanugage__c filters the Boxes to be shown.
(Lite Portal &amp; Partner Portal controllers)</inlineHelpText>
    <label>USER_LANGUAGE</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>