force-app/main/default/objects/Community_User_Local_Settings__c/fields/USER_LOCALESIDKEY__c.field-meta.xml
<CustomField>
    <fullName>USER_LOCALESIDKEY__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <label>USER_LOCALESIDKEY</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>