force-app/main/default/objects/Community_User_Local_Settings__c/fields/USER_TZSIDKEY__c.field-meta.xml
<CustomField>
    <fullName>USER_TZSIDKEY__c</fullName>
    <defaultValue>&quot;America/Los_Angeles&quot;</defaultValue>
    <label>USER_TZSIDKEY</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>